--- a/server/main.css
+++ b/server/main.css
@@ -2,16 +2,22 @@ h1, h2 {
     padding-left: 5px;
 }
 
+h3 {
+    margin-bottom: 5px;
+}
+
 span.accent {
     color: grey;
 }
 
 div {
     margin-bottom: 12px;
+    padding-left: 5px;
 }
 
 div.container {
-    display: flex
+    display: flex;
+    padding-left: 0px;
 }
 
 div.container table {
